chore(sl): add stack labs

--- a/style/stacklabs.css
+++ b/style/stacklabs.css
@@ -20,7 +20,7 @@ body {
     top: 0;
     bottom: 50%;
     background-color: #ebebeb;
-    color: #00a537;
+    color: #4559FF;
     font-size: 128px;
 }
 
@@ -28,6 +28,6 @@ body {
     top: 50%;
     bottom: 0;
     color: #ebebeb;
-    background-color: #00a537;
+    background-color: #4559FF;
     font-size: 84px;
 }
